samples/_failures_safe/1761328991_f2cab4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_470cb0eb.c: In function ‘main’:
./samples/SAFE/__tmp_470cb0eb.c:147:18: error: expected ‘)’ at end of input
  147 |     if (mat2.rows
      |        ~         ^
      |                  )
./samples/SAFE/__tmp_470cb0eb.c:147:5: error: expected declaration or statement at end of input
  147 |     if (mat2.rows
      |     ^~
